ajuste game cassino home

--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -22,6 +22,7 @@
         position: relative;
         width: 100%;
         min-height: 105px;
+        height: auto !important;
         background-color: #00000050;
         height: min-content;
         border-radius: 5px;
