--- a/src/app/loterias/loteria-popular/loteria-popular.component.css
+++ b/src/app/loterias/loteria-popular/loteria-popular.component.css
@@ -35,3 +35,17 @@ iframe {
     height: 100%;
     border: none;
 }
+
+@media only screen and (max-width: 1024px) {
+    .loteria-popular-content.forced-fullscreen {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        z-index: 100;
+    }
+
+    .loteria-frame.forced-fullscreen {
+        height: 100%;
+    }
+}
