--- a/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
+++ b/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
@@ -54,6 +54,10 @@
     }
 }
 
+.games-search--actived .games-search__content {
+    padding-bottom: 100px;
+}
+
 :host ::ng-deep .games-search--actived .games-search__input .search-box__icon--clear {
     right: 55px;
 }
