--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -625,7 +625,7 @@
         </div>
         <ng-container *ngIf="isLoggedIn">
             <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
-                <a [routerLink]="['/pb/play/real/170000/parlaybay']" routerLinkActive="active">
+                <a [routerLink]="['pb/parlaybay/170000']" routerLinkActive="active">
                     <span>PARLAYBAY</span>
                 </a>
             </div>
