--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -32,8 +32,15 @@
                     <h5>{{'geral.informacoesDeContato' | translate}}</h5>
 
                     <div class="form-group input-md">
-                        <input type="text" formControlName="telefone" placeholder="(00)00000-0000"
-                            mask="(00)00000-0000" class="form-control inverted-out" [dropSpecialCharacters]="false">
+                        <input
+                            type="text"
+                            formControlName="telefone"
+                            placeholder="(00)00000-0000"
+                            mask="(00)00000-0000"
+                            class="form-control inverted-out"
+                            [dropSpecialCharacters]="false"
+                            [validation]="false"
+                        >
                         <label for="nome">{{'geral.telefone' | translate}}</label>
                         <app-error-msg [control]="form.get('telefone')"></app-error-msg>
                     </div>
@@ -46,8 +53,14 @@
                     <h5>{{'geral.endereco' | translate}}</h5>
 
                     <div class="form-group input-md">
-                        <input type="text" formControlName="cep" placeholder=" " mask="00000-000"
-                            class="form-control inverted-out" (change)="buscarPorCep($event)">
+                        <input
+                            type="text"
+                            formControlName="cep"
+                            placeholder=""
+                            mask="00000-000"
+                            class="form-control inverted-out"
+                            [validation]="false"
+                        >
                         <label for="nome">{{'geral.cep' | translate}}</label>
                         <app-error-msg [control]="form.get('cep')"></app-error-msg>
                     </div>
@@ -102,7 +115,11 @@
                         <button class="btn btn-custom2 w-150 mr-4" type="button" (click)="activeModal.dismiss('Cross click')">
                             {{'geral.cancelar' | translate}}
                         </button>
-                        <button class="btn btn-custom w-150" type="submit">
+                        <button
+                            class="btn btn-custom w-150"
+                            type="submit"
+                            [disabled]="form.invalid"
+                        >
                             {{'geral.atualizar' | translate}}
                         </button>
                     </div>
