--- a/src/app/esportes/live/jogo/live-jogo.component.html
+++ b/src/app/esportes/live/jogo/live-jogo.component.html
@@ -117,7 +117,7 @@
         </div>
     </div>
     <section class="jogo" *ngIf="!showLoadingIndicator">
-        <div *ngIf="!isMobile" [ngClass]="{'indentificacao-jogo-basquete': jogo?.sport_id == 48242}" class="indentificacao-jogo" style="flex: 1; min-width: 60%;">
+        <div *ngIf="!isMobile" [ngClass]="{'indentificacao-jogo-basquete': jogo?.sport_id == basketballId}" class="indentificacao-jogo" style="flex: 1; min-width: 60%;">
 
             <div class="info-jogo">
                 <small class="campeonato-nome">{{jogo?.campeonato?.nome}}</small>
@@ -125,8 +125,8 @@
                     <div class="time-a">
                         <div class="time-a-nome">
                             <span *ngIf="jogo?.time_a_img; else defaulImageA">
-                                <img *ngIf="jogo?.sport_id == 1" src="https://cdn.wee.bet/img/times/m/{{jogo.time_a_img}}.png" size="m">
-                                <img *ngIf="jogo?.sport_id == 48242" src="https://cdn.wee.bet/img/times/v2/{{jogo.time_a_img}}.png" size="m">
+                                <img *ngIf="jogo?.sport_id == soccerId" src="https://cdn.wee.bet/img/times/m/{{jogo.time_a_img}}.png" size="m">
+                                <img *ngIf="jogo?.sport_id == basketballId" src="https://cdn.wee.bet/img/times/v2/{{jogo.time_a_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageA class="escudo">
                                 <img src="https://cdn.wee.bet/img/times/m/default.png" size="m" class="escudo-img">
@@ -135,7 +135,7 @@
                             <div class="time-nome">
                                 {{jogo?.time_a_nome}}
                             </div>
-                            <div class="game-stats" *ngIf="jogo?.sport_id == 1">
+                            <div class="game-stats" *ngIf="jogo?.sport_id == soccerId">
                                 <div class="game-stats-item">
                                     <div class="game-card">
                                         <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -151,7 +151,7 @@
                                 <div class="game-stats-item">
                                     <div class="game-card yellow-card"></div>
                                     {{ jogo?.stats.casa_cartoes_amarelo }}
-                                </div>                            
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -165,8 +165,8 @@
                     <div class="time-b">
                         <div class="time-b-nome">
                             <span *ngIf="jogo?.time_b_img; else defaulImageB">
-                                <img *ngIf="jogo?.sport_id == 1" src="https://cdn.wee.bet/img/times/m/{{jogo.time_b_img}}.png" size="m">
-                                <img *ngIf="jogo?.sport_id == 48242" src="https://cdn.wee.bet/img/times/v2/{{jogo.time_b_img}}.png" size="m">
+                                <img *ngIf="jogo?.sport_id == soccerId" src="https://cdn.wee.bet/img/times/m/{{jogo.time_b_img}}.png" size="m">
+                                <img *ngIf="jogo?.sport_id == basketballId" src="https://cdn.wee.bet/img/times/v2/{{jogo.time_b_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageB class="escudo">
                                 <img src="https://cdn.wee.bet/img/times/m/default.png" size="m" class="escudo-img">
@@ -175,7 +175,7 @@
                             <div class="time-nome">
                                 {{jogo?.time_b_nome}}
                             </div>
-                            <div class="game-stats" *ngIf="jogo?.sport_id == 1">
+                            <div class="game-stats" *ngIf="jogo?.sport_id == soccerId">
                                 <div class="game-stats-item">
                                     <div class="game-card">
                                         <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -191,22 +191,22 @@
                                 <div class="game-stats-item">
                                     <div class="game-card yellow-card"></div>
                                     {{ jogo?.stats.fora_cartoes_amarelo }}
-                                </div>                            
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="aovivo-tempo">
                     <div class="aovivo-label"><i class="fa fa-circle blink_me"></i> AO VIVO</div>
-                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == 1">{{jogo.info?.tempo}}º {{jogo.info?.minutos}}'</div>
-                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == 48242">Q{{jogo.info?.tempo}} {{jogo.info?.minutos}}'</div>
+                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == soccerId">{{jogo.info?.tempo}}º {{jogo.info?.minutos}}'</div>
+                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == basketballId">Q{{jogo.info?.tempo}} {{jogo.info?.minutos}}'</div>
                     <div class="tempo" *ngIf="jogo?.info?.tempo == 0">Intervalo</div>
                 </div>
             </div>
         </div>
     </section>
     <section class="content-sports inside-event">
-        <div *ngIf="loadedFrame && (isMobile && !theSportUrl)" [ngClass]="{'indentificacao-jogo-basquete': jogo?.sport_id == 48242}" class="indentificacao-jogo" style="flex: 1; min-width: 60%;">
+        <div *ngIf="loadedFrame && (isMobile && !theSportUrl)" [ngClass]="{'indentificacao-jogo-basquete': jogo?.sport_id == basketballId}" class="indentificacao-jogo" style="flex: 1; min-width: 60%;">
             <div class="info-jogo">
                 <small class="campeonato-nome">{{jogo?.campeonato?.nome}}</small>
                 <div class="nome">
