ajuste multiplos dias jogos destaque

--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
@@ -37,7 +37,7 @@
                             {{ jogoDestaque.campeonato?.nome }}
                         </span>
                         <span>
-                            Hoje {{ jogoDestaque.horario | moment:"/ H:mm"}}
+                            {{ jogoDestaque.horario | moment: '' : true}}{{ jogoDestaque.horario | moment:"/ H:mm"}}
                         </span>
                     </div>
 
