novo layout parlaybay

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -624,7 +624,7 @@
             </a>
         </div>
         <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
-            <a [routerLink]="['/parlaybay']" routerLinkActive="active">
+            <a [routerLink]="['/pb']" routerLinkActive="active">
                 <span>PARLAYBAY</span>
             </a>
         </div>
