--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -45,7 +45,7 @@
             />
         </div>
 
-        <div class="bloco" *ngIf="!this.hiddenProviders">
+        <div class="bloco" *ngIf="!this.hideProviders">
             <app-wall-section
                 sectionId="providers"
                 [title]="'geral.provedores' | translate"
