--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -255,6 +255,27 @@
     margin-bottom: 0;
 }
 
+#legitimuz-container {
+    background-color: var(--sidebars);
+    padding: 30px 20px;
+}
+
+#legitimuz {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#verify-identity-cpf {
+    flex: 1;
+    width: 25%;
+}
+
+#legitimuz-action-verify {
+    flex: 1;
+    width: 25%;
+}
+
 @media only screen and (max-width: 1024px) {
     #default-content {
         padding: 20px;
