--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -32,7 +32,7 @@
             <div class="col-md-12" [hidden]="(autoPreenchimento && !cpfValidado) || (!autoPreenchimento && formSocial)">
                 <div class="form-group mb-4">
                     <div class="input-md">
-                        <input type="text" id="nome" class="form-control inverted-out" formControlName="nome"
+                        <input type="text" id="nome" class="form-control inverted-out"  (keypress)="bloquearCaracteresInvalido($event)" formControlName="nome"
                                [ngClass]="applyCssInputError('nome')" placeholder=" " [readonly]="autoPreenchimento">
                         <label for="nome">{{'geral.nomeCompleto' | translate}}</label>
                     </div>
