Hotfix: esconder skeleton dos destaques quando nao tiver jogos | posicao do btn close do card do indique e ganhe

--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -23,6 +23,11 @@
     color: var(--header);
 }
 
+.indique-ganhe-card-content .btn-close {
+    position: absolute;
+    right: 20px;
+}
+
 .btn-indique-ganhe-card {
     background-color: var(--header);
     color: var(--highlight);
