--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -611,6 +611,15 @@ body .change-theme {
     }
 }
 
+@media only screen and (max-width: 480px) {
+    .indique-ganhe-card-content {
+        justify-content: space-around;
+    }
+    .indique-ganhe-card .btn-close {
+        position: static;
+    }
+}
+
 @media only screen and (max-width: 1366px) and (min-width: 1280px){
     .w-130 {
         width: 103px;
